# linux-tsn-eval

./: LICENSE  README.md  requirements.txt
sockets/: README.md  meson.build
sockets/analysis/: analysis.py  factors.py  latency_profile.py  metrics.py  metrics_comparison.py  metrics_groups.py  plots.py  run_analysis.py  run_comparison.py
sockets/experiment/: experiment.py  run_experiment.py  runners.py  rx-intermediate-perf-script.py  tx-intermediate-perf-script.py
sockets/experiment/util/: __init__.py  message_passing_protocol.py  util.py
sockets/misc/: kernel-config  tsn_setup.json
sockets/test/: __init__.py  test_message_passing_protocol.py
sockets/tools/: packet.h  signals.c  signals.h  tsn-listener.c  tsn-talker.c  xdp-common.c  xdp-common.h
